OnPost to Checkout Page

--- a/PhoneShop/Pages/Checkout/Confirmation.cshtml
+++ b/PhoneShop/Pages/Checkout/Confirmation.cshtml
@@ -2,4 +2,5 @@
 @model PhoneShop.Pages.Checkout.ConfirmationModel
 @{
 }
+<a class="btn btn-outline-dark" style="float:left;" asp-area="" asp-page="/Forms/CustomPhone" >Shop here</a>
 <p>Your order has been confirmed</p>
