--- a/PhoneShop/Pages/Forms/CustomPhone.cshtml
+++ b/PhoneShop/Pages/Forms/CustomPhone.cshtml
@@ -2,6 +2,12 @@
 @model PhoneShop.Pages.Forms.CustomPhoneModel
 @{
 }
+
+<script>
+function itWorks() {
+	console.log("itworks")
+}
+</script>
 <div class="container">
 	<h1>Select your specifications</h1>
 	<form method="post" class="mx-auto mt-5 mb-5 px-5 pt-5 rounded-5 bg-light col-4">
@@ -14,14 +20,13 @@
 		<br />
 		<input  type="checkbox" asp-for="Phone.BatteryUpgrade" placeholder="Battery" /> Upgrade to 6000mAh capacity
 		<br />
-		<input  type="checkbox" asp-for="Phone.MemoryUpgrade" placeholder="Memory" /> Upgrade to 1TB Memory
-		<br />
 		<input  type="checkbox" asp-for="Phone.HighRefresh" placeholder="Refresh Rate" /> Upgrade to 240hz refresh rate
 		<br />
 		<input  type="checkbox" asp-for="Phone.OledPanel" placeholder="Oled" /> Upgrade to 8K Oled Panel
 		<br />
 		<br />
-		<button class="btn btn-outline-dark mt-1 mb-3" type="submit">Confirm Selection</button>
+		<button class="btn btn-outline-dark mt-1 mb-3" type="submit" onclick="itWorks">Confirm Selection</button>
+
 		<br />
 	</form>
 
