--- a/PhoneShop/Pages/Checkout/Checkout.cshtml
+++ b/PhoneShop/Pages/Checkout/Checkout.cshtml
@@ -2,4 +2,4 @@
 @model PhoneShop.Pages.Checkout.CheckoutModel
 @{
 }
-<a class="nav-link text-dark" asp-area="" asp-page="Checkout/Confirmation">Confirm Purchase</a>
+<a class="nav-link text-dark" asp-area="" asp-page="/Checkout/Confirmation">Confirm Purchase</a>
